# adaptive-deep-receivers

./: .gitignore  LICENSE  README.md  pyproject.toml
adr/: __init__.py
adr/demos/: linear_phase_channel.py
adr/experiments/: __init__.py  batch_config.json  batch_plotter.py  batch_runner.py  scenario_plotter.py  single_runner.py  utils.py
adr/experiments/NeurIPS25_AI4NextG/Modular/: quadriga_linear_vs_snr.json  quadriga_linear_vs_time.json  run_commands.txt
adr/experiments/NeurIPS25_AI4NextG/Streaming/: cost_linear_vs_snr.json  cost_linear_vs_time.json  quadriga_nonlinear_vs_time.json  run_commands.txt
adr/experiments/framework/: __init__.py  batch_config.json  batch_plotter.py  batch_runner.py  scenario_config.json  scenario_plotter.py  single_config.json  single_runner.py
adr/src/: utils.py
adr/src/channels/: __init__.py  base.py  modulations.py  uplink_mimo_channel.py
adr/src/detectors/: __init__.py  base.py  bayesian_deepsic.py  bayesian_resnet_detector.py  deepsic.py  deepsic_block.py  resnet.py  resnet_detector.py
adr/src/trainers/: __init__.py  training_algorithms.py
adr/src/training_algorithms/: __init__.py  bayesian_full_cov.py  bbb.py  blr.py  bog.py  bong.py  ekf.py  non_bayesian.py  recursive_bayes.py  sgd.py  step_functions.py
adr/tests/: test_streaming_deepsic.py
adr/tests/integration/: test_deepsic_full_cov_training.py  test_deepsic_non_bayesian_training.py  test_deepsic_static_training.py  test_deepsic_training.py
adr/tests/unit/: test_deepsic.py
bong/: README.md  util.py
bong/src/: bbb.py  blr.py  bog.py  bong.py
(+29 files in other folders)
